# vllm

./: .gitignore  QKV_LoRA_Fusion_Summary.md  QKV_LoRA_Performance_Guide.md  all_lora.sh  ct.sh  final_verification.py  ncu_lora.sh  punica_kernel_benchmark.sh  run_ncu_analysis.sh  run_timing_test.sh  run_vllm_lora_ncu.py  simple_ncu_lora.sh  test.cu  test.py  test_activemask  test_cuda_triton_equivalence.py  test_mixed_lora_batch.py  test_qkv_lora_timing.py  test_ultimate_fusion.py  vllm_lora_test.py
benchmarks/: backend_request_func.py  benchmark_serving.py
continuetime/: analyze_continuous_timing_v3.py
vllm/: sequence.py
vllm/benchmarks/: endpoint_request_func.py
vllm/engine/: llm_engine.py
vllm/entrypoints/openai/: protocol.py  serving_chat.py  serving_completion.py
vllm/lora/: fully_sharded_layers.py  fused_qkv_lora.py  layers.py
vllm/lora/ops/triton_ops/: lora_expand_op.py  lora_shrink_op.py
vllm/lora/punica_wrapper/: punica_gpu.py
vllm/lora/punica_wrapper/cuda_punica/: CMakeLists.txt  README.md  build.sh  c_wrapper.cpp  ctypes_wrapper.py  expand_ctypes_wrapper.py  fused_expand_ctypes_wrapper.py  lora_expand_kernel.cu  lora_expand_kernel.h  lora_fused_expand_kernel.cu  lora_fused_expand_kernel.h  lora_shrink_kernel.cu  lora_shrink_kernel.h  ultimate_fusion_ctypes_wrapper.py  ultimate_fusion_kernel.cu  ultimate_fusion_kernel.h
vllm/model_executor/models/: qwen2.py
